# libinterceptor

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  interceptor.cpp  libinterceptor.pc.in
test/: Makefile.am  main.c  main.cpp
